--- a/css/style.css
+++ b/css/style.css
@@ -1773,6 +1773,14 @@ a {
       background: #8103FF; }
       .test-main-introUnit_01 .test-main-introUnit-info {
         width: 430px; }
+    .test-main-introUnit_02 {
+      background: #2BC6C6; }
+    .test-main-introUnit_03 {
+      background: #000000; }
+    .test-main-introUnit_04 {
+      background: #61D05F; }
+    .test-main-introUnit_05 {
+      background: #FFA95A; }
     .test-main-introUnit-container {
       display: -webkit-box;
       display: -ms-flexbox;
@@ -1806,14 +1814,53 @@ a {
       font-family: 'GraublauSlab-Heavy';
       font-size: 50px;
       line-height: 51px;
-      margin-bottom: 20px; }
+      margin-bottom: 20px;
+      -moz-transition: all ease-in-out 0.3s;
+      -o-transition: all ease-in-out 0.3s;
+      -webkit-transition: all ease-in-out 0.3s;
+      transition: all ease-in-out 0.3s;
+      opacity: 0;
+      -webkit-transform: translateX(50%);
+      -ms-transform: translateX(50%);
+      transform: translateX(50%); }
     .test-main-introUnit-text {
+      -moz-transition: all ease-in-out 0.3s;
+      -o-transition: all ease-in-out 0.3s;
+      -webkit-transition: all ease-in-out 0.3s;
+      transition: all ease-in-out 0.3s;
       margin-bottom: 35px;
-      min-height: 75px; }
+      min-height: 75px;
+      opacity: 0;
+      -webkit-transform: translateX(50%);
+      -ms-transform: translateX(50%);
+      transform: translateX(50%);
+      -webkit-transition-delay: .2s;
+      -o-transition-delay: .2s;
+      transition-delay: .2s; }
     .test-main-introUnit-button {
+      -moz-transition: all ease-in-out 0.3s;
+      -o-transition: all ease-in-out 0.3s;
+      -webkit-transition: all ease-in-out 0.3s;
+      transition: all ease-in-out 0.3s;
       height: 48px;
       line-height: 48px;
-      width: 170px; }
+      width: 170px;
+      opacity: 0;
+      -webkit-transform: scale(0);
+      -ms-transform: scale(0);
+      transform: scale(0);
+      -webkit-transition-delay: .3s;
+      -o-transition-delay: .3s;
+      transition-delay: .3s; }
+    .test-main-introUnit-image {
+      -moz-transition: all ease-in-out 0.3s;
+      -o-transition: all ease-in-out 0.3s;
+      -webkit-transition: all ease-in-out 0.3s;
+      transition: all ease-in-out 0.3s;
+      opacity: 0;
+      -webkit-transform: scale(0);
+      -ms-transform: scale(0);
+      transform: scale(0); }
   .test-main-unit {
     min-height: 100vh;
     display: block; }
@@ -1876,6 +1923,10 @@ a {
       -webkit-transform: translateX(0);
       -ms-transform: translateX(0);
       transform: translateX(0); }
+    .test-main-unit_noImage .test-main-body-images {
+      display: none; }
+    .test-main-unit_noImage .test-main-body-text {
+      margin-left: 180px; }
   .test-main-segment {
     display: block; }
     .test-main-segment_01 .test-main-unit-header-info {
@@ -1888,6 +1939,26 @@ a {
       background-color: #61D05F; }
     .test-main-segment_05 .test-main-unit-header-info {
       background-color: #FFA95A; }
+    .test-main-segment.slick-current .test-main-introUnit-image {
+      -webkit-transform: none;
+      -ms-transform: none;
+      transform: none;
+      opacity: 1; }
+    .test-main-segment.slick-current .test-main-introUnit-text {
+      -webkit-transform: none;
+      -ms-transform: none;
+      transform: none;
+      opacity: 1; }
+    .test-main-segment.slick-current .test-main-introUnit-title {
+      -webkit-transform: none;
+      -ms-transform: none;
+      transform: none;
+      opacity: 1; }
+    .test-main-segment.slick-current .test-main-introUnit-button {
+      -webkit-transform: none;
+      -ms-transform: none;
+      transform: none;
+      opacity: 1; }
   .test-main-sidebar {
     margin-top: -124px;
     width: 300px;
@@ -1970,6 +2041,8 @@ a {
           -webkit-transform: scale(1);
           -ms-transform: scale(1);
           transform: scale(1); }
+        .test-main-body-images-wrap img.filler {
+          max-width: 100%; }
       .test-main-body-images-body {
         width: 100%; }
       .test-main-body-images-controls {
@@ -2023,6 +2096,7 @@ a {
         background-color: #fff;
         height: 476px; }
         .test-main-body-images-unit .filler {
+          position: static;
           max-height: 100%;
           max-width: 100%;
           width: 100%; }
@@ -2106,6 +2180,7 @@ a {
           .test-main-body-footer-results-info-title {
             color: #043BFF; }
           .test-main-body-footer-results-info-text {
+            width: 100%;
             -moz-transition: all ease-in-out 0.3s;
             -o-transition: all ease-in-out 0.3s;
             -webkit-transition: all ease-in-out 0.3s;
@@ -2197,3 +2272,195 @@ a {
           -webkit-transform: translateX(0);
           -ms-transform: translateX(0);
           transform: translateX(0); }
+  .test-rating {
+    padding-bottom: 150px;
+    background-image: url(../images/rating-bg.svg);
+    background-size: cover;
+    display: block; }
+    .test-rating-container {
+      position: relative;
+      width: 1280px;
+      margin: 0 auto; }
+      .test-rating-container table {
+        font-family: 'GraublauSansDisplay-Regular';
+        font-size: 25px; }
+        .test-rating-container table td {
+          padding-top: 4px;
+          padding-bottom: 4px;
+          height: 39px; }
+          .test-rating-container table td:nth-child(1) {
+            width: 350px;
+            padding-left: 15px; }
+          .test-rating-container table td:nth-child(2) {
+            width: 138px; }
+          .test-rating-container table td:nth-child(n+3):nth-child(-n+7) {
+            width: 59px; }
+          .test-rating-container table td:nth-child(8) {
+            width: 101px; }
+          .test-rating-container table td:nth-child(9) {
+            width: 70px; }
+            .test-rating-container table td:nth-child(9) img {
+              margin-top: 5px; }
+          .test-rating-container table td:nth-child(n+3) {
+            text-align: center; }
+    .test-rating-header {
+      padding-top: 17px;
+      margin: 0 auto;
+      width: 398px;
+      margin-bottom: -14px; }
+      .test-rating-header img {
+        max-width: 100%; }
+    .test-rating-wrap {
+      width: 980px;
+      margin: 0 auto; }
+    .test-rating-table-wrap {
+      padding: 9px 24px 34px 24px;
+      background-color: #fff;
+      color: #043BFF;
+      margin-bottom: 8px; }
+    .test-rating-table-header {
+      padding: 0 24px;
+      margin-bottom: 9px; }
+      .test-rating-table-header table {
+        font-family: 'GraublauSans-Regular';
+        font-size: 20px;
+        line-height: 24px; }
+        .test-rating-table-header table td {
+          vertical-align: top; }
+          .test-rating-table-header table td:nth-child(2) {
+            position: relative; }
+            .test-rating-table-header table td:nth-child(2):after {
+              content: "";
+              position: absolute;
+              top: 13px;
+              right: 6px;
+              width: 70px;
+              height: 1px;
+              background-color: #fff; }
+          .test-rating-table-header table td:nth-child(n+3):nth-child(-n+6) {
+            position: relative; }
+            .test-rating-table-header table td:nth-child(n+3):nth-child(-n+6):after {
+              content: "+";
+              position: absolute;
+              top: 1px;
+              right: -4px; }
+          .test-rating-table-header table td:nth-child(7) {
+            position: relative; }
+            .test-rating-table-header table td:nth-child(7):after {
+              content: "=";
+              position: absolute;
+              top: 1px;
+              right: -4px; }
+          .test-rating-table-header table td:nth-child(8), .test-rating-table-header table td:nth-child(1), .test-rating-table-header table td:nth-child(2) {
+            padding-top: 3px; }
+    .test-rating-table-player {
+      margin-bottom: 18px;
+      padding: 0 24px;
+      background-color: #fff;
+      color: #043BFF; }
+      .test-rating-table-player table td {
+        vertical-align: middle;
+        height: 72px; }
+    .test-rating-table-unit {
+      display: block; }
+      .test-rating-table-unit table td {
+        vertical-align: middle; }
+        .test-rating-table-unit table td:nth-child(8) {
+          border-left: 12px solid #fff;
+          border-right: 12px solid #fff; }
+      .test-rating-table-unit table tr:nth-child(2n) {
+        border-top: 1px solid rgba(0, 56, 255, 0.4);
+        border-bottom: 1px solid rgba(0, 56, 255, 0.4);
+        background: rgba(0, 56, 255, 0.1); }
+    .test-rating-table-numeration {
+      padding-right: 24px;
+      margin-bottom: 20px;
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-pack: end;
+      -ms-flex-pack: end;
+      justify-content: flex-end; }
+      .test-rating-table-numeration-unit {
+        -moz-transition: all ease-in-out 0.3s;
+        -o-transition: all ease-in-out 0.3s;
+        -webkit-transition: all ease-in-out 0.3s;
+        transition: all ease-in-out 0.3s;
+        cursor: pointer;
+        border-bottom: 1px solid rgba(254, 254, 254, 0.6);
+        width: 30px;
+        text-align: center;
+        height: 40px;
+        line-height: 40px; }
+        .test-rating-table-numeration-unit_active {
+          border-bottom: 1px solid #fefefe; }
+        .test-rating-table-numeration-unit:hover {
+          border-bottom: 1px solid #fefefe; }
+    .test-rating-best {
+      margin-top: 47px;
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      -ms-flex-wrap: wrap;
+      flex-wrap: wrap; }
+      .test-rating-best-unit {
+        width: calc(50% - 10px);
+        margin-bottom: 20px;
+        margin-right: 20px; }
+        .test-rating-best-unit:nth-child(2n) {
+          margin-right: 0; }
+        .test-rating-best-unit_01 .test-rating-best-unit-header {
+          background-color: #8103FF; }
+        .test-rating-best-unit_02 .test-rating-best-unit-header {
+          background-color: #2BC6C6; }
+        .test-rating-best-unit_03 .test-rating-best-unit-header {
+          background-color: #000000; }
+        .test-rating-best-unit_04 .test-rating-best-unit-header {
+          background-color: #61D05F; }
+        .test-rating-best-unit_05 .test-rating-best-unit-header {
+          background-color: #FFA95A; }
+        .test-rating-best-unit-header {
+          padding: 20px 0 31px 0; }
+          .test-rating-best-unit-header-image {
+            width: 124px;
+            margin: 0 auto;
+            margin-bottom: 12px; }
+            .test-rating-best-unit-header-image img {
+              max-width: 100%; }
+          .test-rating-best-unit-header-title {
+            text-align: center;
+            font-size: 30px;
+            line-height: 31px;
+            font-family: "GraublauSlab-Heavy"; }
+        .test-rating-best-unit-body {
+          background-color: #fff;
+          color: #043BFF;
+          padding: 18px 53px 36px 37px; }
+          .test-rating-best-unit-body-unit {
+            font-family: 'GraublauSansDisplay-Regular';
+            font-size: 25px;
+            display: -webkit-box;
+            display: -ms-flexbox;
+            display: flex;
+            -webkit-box-pack: justify;
+            -ms-flex-pack: justify;
+            justify-content: space-between;
+            margin-bottom: 14px; }
+            .test-rating-best-unit-body-unit:last-child {
+              margin-bottom: 0; }
+    .test-rating-title {
+      padding-left: 24px;
+      font-family: 'GraublauSlab-Heavy';
+      font-size: 30px;
+      line-height: 31px;
+      margin-bottom: 48px; }
+    .test-rating-logo-wrap {
+      position: absolute;
+      top: 34px;
+      left: 45px; }
+      .test-rating-logo-wrap .header-logo img {
+        max-width: 100%; }
+      .test-rating-logo-wrap .header-logo_01 {
+        width: 89.43px; }
+      .test-rating-logo-wrap .header-logo_02 {
+        width: 90.43px; }
