--- a/jade/test.jade
+++ b/jade/test.jade
@@ -298,7 +298,7 @@ html
 													.test-main-body-footer-results-info-text-inner.test-main-body-footer-results-info-text-inner_wrong Неверно. За эту добычу цена была уплачена жизнью бабки-процентщицы и ее неудачливой сестры, а речь идет, конечно же, о Родионе Раскольникове из романа Достоевского «Преступление и наказание».
 											.test-main-body-footer-results-button 
 												span Следующий вопрос
-				.test-main-unit.test-main-unit_noImage
+				.test-main-unit
 					.test-main-unit-header
 						.test-main-unit-header-wrap
 							.test-main-unit-header-logo-wrap
@@ -470,7 +470,7 @@ html
 													.test-main-body-footer-results-info-text-inner.test-main-body-footer-results-info-text-inner_wrong Неверно. За эту добычу цена была уплачена жизнью бабки-процентщицы и ее неудачливой сестры, а речь идет, конечно же, о Родионе Раскольникове из романа Достоевского «Преступление и наказание».
 											.test-main-body-footer-results-button 
 												span Следующий вопрос
-				.test-main-unit.test-main-unit_noImage
+				.test-main-unit
 					.test-main-unit-header
 						.test-main-unit-header-wrap
 							.test-main-unit-header-logo-wrap
@@ -1012,7 +1012,7 @@ html
 													.test-main-body-footer-results-info-text-inner.test-main-body-footer-results-info-text-inner_wrong Неверно. За эту добычу цена была уплачена жизнью бабки-процентщицы и ее неудачливой сестры, а речь идет, конечно же, о Родионе Раскольникове из романа Достоевского «Преступление и наказание».
 											.test-main-body-footer-results-button 
 												span Следующий вопрос
-				.test-main-unit.test-main-unit_noImage
+				.test-main-unit
 					.test-main-unit-header
 						.test-main-unit-header-wrap
 							.test-main-unit-header-logo-wrap
@@ -1184,7 +1184,7 @@ html
 													.test-main-body-footer-results-info-text-inner.test-main-body-footer-results-info-text-inner_wrong Неверно. За эту добычу цена была уплачена жизнью бабки-процентщицы и ее неудачливой сестры, а речь идет, конечно же, о Родионе Раскольникове из романа Достоевского «Преступление и наказание».
 											.test-main-body-footer-results-button 
 												span Следующий вопрос
-				.test-main-unit.test-main-unit_noImage
+				.test-main-unit
 					.test-main-unit-header
 						.test-main-unit-header-wrap
 							.test-main-unit-header-logo-wrap
@@ -1369,7 +1369,7 @@ html
 													.test-main-body-footer-results-info-text-inner.test-main-body-footer-results-info-text-inner_wrong Неверно. За эту добычу цена была уплачена жизнью бабки-процентщицы и ее неудачливой сестры, а речь идет, конечно же, о Родионе Раскольникове из романа Достоевского «Преступление и наказание».
 											.test-main-body-footer-results-button 
 												span Следующий вопрос
-				.test-main-unit.test-main-unit_noImage
+				.test-main-unit
 					.test-main-unit-header
 						.test-main-unit-header-wrap
 							.test-main-unit-header-logo-wrap
@@ -1541,7 +1541,7 @@ html
 													.test-main-body-footer-results-info-text-inner.test-main-body-footer-results-info-text-inner_wrong Неверно. За эту добычу цена была уплачена жизнью бабки-процентщицы и ее неудачливой сестры, а речь идет, конечно же, о Родионе Раскольникове из романа Достоевского «Преступление и наказание».
 											.test-main-body-footer-results-button 
 												span Следующий вопрос
-				.test-main-unit.test-main-unit_noImage
+				.test-main-unit
 					.test-main-unit-header
 						.test-main-unit-header-wrap
 							.test-main-unit-header-logo-wrap
@@ -1726,7 +1726,7 @@ html
 													.test-main-body-footer-results-info-text-inner.test-main-body-footer-results-info-text-inner_wrong Неверно. За эту добычу цена была уплачена жизнью бабки-процентщицы и ее неудачливой сестры, а речь идет, конечно же, о Родионе Раскольникове из романа Достоевского «Преступление и наказание».
 											.test-main-body-footer-results-button 
 												span Следующий вопрос
-				.test-main-unit.test-main-unit_noImage
+				.test-main-unit
 					.test-main-unit-header
 						.test-main-unit-header-wrap
 							.test-main-unit-header-logo-wrap
@@ -1898,7 +1898,7 @@ html
 													.test-main-body-footer-results-info-text-inner.test-main-body-footer-results-info-text-inner_wrong Неверно. За эту добычу цена была уплачена жизнью бабки-процентщицы и ее неудачливой сестры, а речь идет, конечно же, о Родионе Раскольникове из романа Достоевского «Преступление и наказание».
 											.test-main-body-footer-results-button 
 												span Следующий вопрос
-				.test-main-unit.test-main-unit_noImage
+				.test-main-unit
 					.test-main-unit-header
 						.test-main-unit-header-wrap
 							.test-main-unit-header-logo-wrap
