--- a/jade/index.jade
+++ b/jade/index.jade
@@ -49,7 +49,7 @@ html
 						.main-games-unit.main-games-unit_disabled(data-city="Нижневартовск")
 							.main-games-unit-date 25
 							.main-games-unit-info
-								.main-games-unit-info-unit.main-games-unit-info-unit_place.game-with-adress Нижневартовск «Трактиръ на Северной» улица Северная, 9 п / 2
+								.main-games-unit-info-unit.main-games-unit-info-unit_place Нижневартовск
 								.main-games-unit-info-unit.main-games-unit-info-unit_time 18:00
 							.main-games-unit-button.button.button_orange.register Участвовать
 					.main-games-month Ноябрь
@@ -102,3 +102,4 @@ html
 		.popup.popup_finish
 			.popup-wrap
 				.popup-title Спасибо за регистрацию!
+				
