--- a/css/style.scss
+++ b/css/style.scss
@@ -291,7 +291,10 @@ input[type=submit], input[type=button] {
 		border-radius:0!important;
 	}
 }
-
+.game-with-adress{
+	line-height: 15px;
+	font-size: 16px;
+}
 .main{
 	background: url(../images/main-bg.svg);
 
