--- a/css/style.css
+++ b/css/style.css
@@ -980,6 +980,10 @@ a {
   border: none;
   border-radius: 0 !important; }
 
+.game-with-adress {
+  line-height: 15px;
+  font-size: 16px; }
+
 .main {
   background: url(../images/main-bg.svg);
   background-repeat: no-repeat;
