--- a/css/style.css
+++ b/css/style.css
@@ -2468,3 +2468,7 @@ a {
         width: 89.43px; }
       .test-rating-logo-wrap .header-logo_02 {
         width: 90.43px; }
+
+.game-with-adress {
+  line-height: 15px;
+  font-size: 16px; }
