--- a/css/style.scss
+++ b/css/style.scss
@@ -58,13 +58,13 @@ $tour4color:#61D05F;
 $tour5color:#FFA95A;
 $green:#00CC39;
 $red:#E8244C;
-//Mixins 
+//Mixins
 @mixin transform ($style: translate(0,-50%)){
 	-webkit-transform: $style;
 	transform: $style;
 }
 
-@mixin transition($time) {	
+@mixin transition($time) {
     -moz-transition: all ease-in-out $time;
     -o-transition: all ease-in-out $time;
     -webkit-transition: all ease-in-out $time;
@@ -75,8 +75,8 @@ $red:#E8244C;
 	content:$content;
 	//font-family: '' !important;
 	speak: none;
-	font-style: normal;	
-	font-weight: normal;	
+	font-style: normal;
+	font-weight: normal;
 	font-variant: normal;
 	text-transform: none;
 	line-height: 1;
@@ -98,26 +98,26 @@ $red:#E8244C;
 	------------------------------------------------- */
 html {
 	height:100%;
-	min-width:320px; 
+	min-width:320px;
 }
 body {
 	overflow:hidden;
-	font:normal normal 18px/25px 'GraublauSans-Regular', Freesans, sans-serif; 
+	font:normal normal 18px/25px 'GraublauSans-Regular', Freesans, sans-serif;
 	color:#fff;
 	-webkit-text-size-adjust:100%;
 	-webkit-font-smoothing:antialiased;
 	min-height:100%;
 }
 
-a { 
+a {
 	color:inherit;
-	text-decoration:none; 
+	text-decoration:none;
 	&:hover {
 		text-decoration:none;
 	}
 	&.ajax-link {
 		text-decoration:none;
-		
+
 	}
 }
 
@@ -156,7 +156,7 @@ input[type=submit], input[type=button] {
 /*	-------------------------------------------------
 	Styles
 	------------------------------------------------- */
-	
+
 
 .container{
 	width:1280px;
@@ -271,7 +271,7 @@ input[type=submit], input[type=button] {
 			color:$purple;
 			height:50px;
 			text-align: center;
-			line-height: 50px;	
+			line-height: 50px;
 			&[aria-selected=true]{
 				background-color: #fff!important;
 				&.select2-results__option--highlighted{
@@ -422,7 +422,7 @@ input[type=submit], input[type=button] {
 		flex-wrap:wrap;
 		justify-content:space-between;
 		&-column{
-			
+
 		}
 		&-unit{
 			width:453px;
@@ -452,7 +452,7 @@ input[type=submit], input[type=button] {
 			&:nth-child(5){
 				order:4;
 			}
-			
+
 		}
 	}
 }
@@ -483,7 +483,7 @@ input[type=submit], input[type=button] {
 	&-08{
 		left:50%;
 		transform:translateX(-50%);
-		top:78px;	
+		top:78px;
 	}
 }
 .popup{
@@ -518,7 +518,7 @@ input[type=submit], input[type=button] {
 
 	}
 	&-form{
-		
+
 		background-color: #fff;
 		padding:83px 65px 60px 65px;
 		input{
@@ -596,12 +596,12 @@ input[type=submit], input[type=button] {
 	}
 }
 .test{
-	min-height: 100vh;	
+	min-height: 100vh;
 	display: block;
 	&-wrap{
 		background-image: url(../images/test-bg.svg);
 		background-size: cover;
-		min-height: 100vh;	
+		min-height: 100vh;
 	}
 	&-filler{
 		position: absolute;
@@ -651,7 +651,7 @@ input[type=submit], input[type=button] {
 		padding:0 77px 0 30px;
 		display: flex;
 		justify-content:space-between;
-		
+
 		&-wrap{
 			width:100%;
 			display: flex;
@@ -757,10 +757,10 @@ input[type=submit], input[type=button] {
 			font-family:'GraublauSansItalic';
 			display: flex;
 			&-title{
-				
+
 			}
 			&-wrap{
-				
+
 				padding:0 6px;
 				display: flex;
 				align-items:center;
@@ -825,10 +825,10 @@ input[type=submit], input[type=button] {
 					transform:scale(1);
 					opacity: 1;
 				}
-				
+
 			}
 			&:not(:first-child){
-				
+
 				.test-content-unit-bottom-answers-unit{
 					transform:translateX(50%);
 					opacity: 0;
@@ -879,28 +879,28 @@ input[type=submit], input[type=button] {
 					display: flex;
 					flex-wrap:wrap;
 					justify-content:space-between;
-					
+
 					&-unit{
 						cursor: pointer;
 						width:224px;
 						background-color: #fff;
 						margin-bottom: 2px;
-						
+
 						text-align: center;
 						line-height: 79px;
 						height:79px;
 						color:$blue;
 						position: relative;
-						
+
 						@include transition(.5s);
-						
+
 
 					}
 				}
 				&-results{
 
-					
-					
+
+
 					background-color: #fff;
 					display: block;
 					&.slick-current{
@@ -918,7 +918,7 @@ input[type=submit], input[type=button] {
 						@include transition(.5s);
 						font-size: 16px;
 						padding:0 15px;
-						
+
 						height:78px;
 						line-height: 78px;
 						background-color: $orange;
@@ -1051,7 +1051,7 @@ input[type=submit], input[type=button] {
 
 					}
 				}
-			} 
+			}
 			&-button{
 				height:48px;
 				line-height: 48px;
@@ -1191,7 +1191,7 @@ input[type=submit], input[type=button] {
 						content:"";
 						position: absolute;
 						top:-4px;
-						
+
 						left:0;
 						width:100%;
 						height:1px;
@@ -1231,7 +1231,7 @@ input[type=submit], input[type=button] {
 				@include transition(.3s);
 				opacity: 	0;
 				transform:scale(0);
-				
+
 			}
 		}
 		&-unit{
@@ -1239,7 +1239,7 @@ input[type=submit], input[type=button] {
 			display: block;
 			&-header{
 				height:124px;
-				
+
 				.header-logo{
 					img{
 						max-width:100%;
@@ -1262,7 +1262,7 @@ input[type=submit], input[type=button] {
 					display: flex;
 					align-items:center;
 					height:100%;
-					
+
 				}
 				&-info{
 					padding-left: 25px;
@@ -1286,8 +1286,8 @@ input[type=submit], input[type=button] {
 								margin-left: 33px;
 							}
 							&-unit{
-								
-								
+
+
 							}
 						}
 					}
@@ -1304,7 +1304,7 @@ input[type=submit], input[type=button] {
 							transform:scale(1);
 						}
 
-						
+
 					}
 				}
 				.test-main-body{
@@ -1377,31 +1377,31 @@ input[type=submit], input[type=button] {
 					}
 					&-button{
 						transform:none;
-						opacity: 1;	
+						opacity: 1;
 					}
 				}
 			}
-			
+
 		}
 		&-sidebar{
 			margin-top: -124px;
-			
+
 			width:300px;
 			background-color: #0038FF;
 		}
 		&-container{
 			display: flex;
-			
+
 
 		}
 		&-body{
-			
+
 			width:calc(100% - 50px);
 			margin-left:-250px;
 
 			&-unit{
 				padding-bottom: 54px;
-				
+
 				display: flex;
 				flex-direction:column;
 				align-items:center;
@@ -1426,12 +1426,12 @@ input[type=submit], input[type=button] {
 					.test-main-body-images-controls{
 						opacity: 1;
 						visibility: visible;
-						
+
 					}
 				}
 				&-wrap{
 					display: block;
-					
+
 					.slick-dots{
 						padding-top: 20px;
 						bottom:-20px;
@@ -1470,10 +1470,10 @@ input[type=submit], input[type=button] {
 				&-body{
 
 					width:100%;
-					
+
 				}
 				&-controls{
-					
+
 					visibility: 	hidden;
 					opacity: 	0;
 					display: 	flex;
@@ -1534,13 +1534,13 @@ input[type=submit], input[type=button] {
 				padding-right: 20px;
 			}
 			&-footer{
-				
+
 				margin-right: auto;
 				margin-left: 250px;
 				height:110px;
 				width:980px;
 				&-answers{
-					
+
 					display: flex;
 
 					&-unit{
@@ -1550,7 +1550,7 @@ input[type=submit], input[type=button] {
 						display: flex;
 						align-items:center;
 						padding:0 44px 0 20px;
-						
+
 						flex:1;
 						margin-right: 1px;
 						background-color: #fff;
@@ -1606,7 +1606,7 @@ input[type=submit], input[type=button] {
 									width: 27px;
 									height: 26px;
 									background-repeat: no-repeat;
-									
+
 								}
 								&_correct{
 									color:$green;
@@ -1676,7 +1676,7 @@ input[type=submit], input[type=button] {
 					}
 				}
 			}
-			
+
 
 		}
 	}
@@ -1744,7 +1744,7 @@ input[type=submit], input[type=button] {
 				margin-bottom: 8px;
 			}
 			&-header{
-				
+
 				padding:0 24px;
 				margin-bottom: 9px;
 				table{
@@ -1772,8 +1772,8 @@ input[type=submit], input[type=button] {
 								position: absolute;
 								top: 1px;
     							right: -4px;
-								
-								
+
+
 							}
 						}
 						&:nth-child(7){
@@ -1783,8 +1783,8 @@ input[type=submit], input[type=button] {
 								position: absolute;
 								top: 1px;
     							right: -4px;
-								
-								
+
+
 							}
 						}
 						&:nth-child(8),&:nth-child(1),&:nth-child(2){
@@ -1792,7 +1792,7 @@ input[type=submit], input[type=button] {
 						}
 					}
 				}
-				
+
 			}
 			&-player{
 				margin-bottom: 18px;
@@ -1801,7 +1801,7 @@ input[type=submit], input[type=button] {
 				color:$blue;
 				table{
 					td{
-						
+
     					vertical-align: middle;
 						height:72px;
 					}
@@ -1831,7 +1831,7 @@ input[type=submit], input[type=button] {
 				    margin-bottom: 20px;
 				display: flex;
 				justify-content:flex-end;
-				
+
 				&-unit{
 					@include transition(.3s);
 					cursor: pointer;
@@ -1946,4 +1946,9 @@ input[type=submit], input[type=button] {
 		}
 	}
 
+}
+
+.game-with-adress {
+    line-height: 15px;
+    font-size: 16px;
 }
