--- a/jade/test.jade
+++ b/jade/test.jade
@@ -1982,479 +1982,14 @@ html
 										img(src="images/icon-stats.svg" alt="")
 						.test-rating-table-player
 							table
+								tbody
 								
-								tr
-									td Power|™4ekHyTblu NigGa
-									td
-									td 0
-									td 2
-									td 5
-									td 2
-									td 5
-									td 8
-									td N
 						.test-rating-table-numeration
-							.test-rating-table-numeration-unit.test-rating-table-numeration-unit_active 1
-							.test-rating-table-numeration-unit 2
-							.test-rating-table-numeration-unit 3
-							.test-rating-table-numeration-unit 4
-							.test-rating-table-numeration-unit 5
-							.test-rating-table-numeration-unit 6
-							.test-rating-table-numeration-unit 7
-							.test-rating-table-numeration-unit 8
-							.test-rating-table-numeration-unit 9
-							.test-rating-table-numeration-unit 10
+							
 						.test-rating-table-wrap
-							.test-rating-table-unit
-								table
-									tr
-										td Носок судьбы
-										td
-										td 0
-										td 1
-										td 5
-										td 3
-										td 5
-										td 8
-										td 1
-									tr
-										td Носок судьбы
-										td
-										td 0
-										td 1
-										td 5
-										td 3
-										td 5
-										td 8
-										td 1
-									tr
-										td 3Jlou_4uTep
-										td
-										td 0
-										td 1
-										td 5
-										td 3
-										td 5
-										td 8
-										td 1
-									tr
-										td Fluffy
-										td
-										td 0
-										td 1
-										td 5
-										td 3
-										td 5
-										td 8
-										td 1
-									tr
-										td JoKeR :D
-										td
-										td 0
-										td 1
-										td 5
-										td 3
-										td 5
-										td 8
-										td 1
-									tr
-										td Mr. Zadrot
-										td
-										td 0
-										td 1
-										td 5
-										td 3
-										td 5
-										td 8
-										td 1
-									tr
-										td Agressor
-										td
-										td 0
-										td 1
-										td 5
-										td 3
-										td 5
-										td 8
-										td 1
-									tr
-										td IceStorm
-										td
-										td 0
-										td 1
-										td 5
-										td 3
-										td 5
-										td 8
-										td 1
-							.test-rating-table-unit
-								table
-									tr
-										td Носок судьбы
-										td
-										td 0
-										td 1
-										td 5
-										td 3
-										td 5
-										td 8
-										td 1
-
-									tr
-										td 3Jlou_4uTep
-										td
-										td 0
-										td 1
-										td 5
-										td 3
-										td 5
-										td 8
-										td 1
-									tr
-										td Fluffy
-										td
-										td 0
-										td 1
-										td 5
-										td 3
-										td 5
-										td 8
-										td 1
-									tr
-										td JoKeR :D
-										td
-										td 0
-										td 1
-										td 5
-										td 3
-										td 5
-										td 8
-										td 1
-									tr
-										td Mr. Zadrot
-										td
-										td 0
-										td 1
-										td 5
-										td 3
-										td 5
-										td 8
-										td 1
-									tr
-										td Agressor
-										td
-										td 0
-										td 1
-										td 5
-										td 3
-										td 5
-										td 8
-										td 1
-									tr
-										td IceStorm
-										td
-										td 0
-										td 1
-										td 5
-										td 3
-										td 5
-										td 8
-										td 1
-									tr
-										td Power|™4ekHyTblu NigGa
-										td
-										td 0
-										td 1
-										td 5
-										td 3
-										td 5
-										td 8
-										td 1
-									tr
-										td Носок судьбы
-										td
-										td 0
-										td 1
-										td 5
-										td 3
-										td 5
-										td 8
-										td 1
-									tr
-										td 3Jlou_4uTep
-										td
-										td 0
-										td 1
-										td 5
-										td 3
-										td 5
-										td 8
-										td 1
-									tr
-										td Fluffy
-										td
-										td 0
-										td 1
-										td 5
-										td 3
-										td 5
-										td 8
-										td 1
-									tr
-										td JoKeR :D
-										td
-										td 0
-										td 1
-										td 5
-										td 3
-										td 5
-										td 8
-										td 1
-									tr
-										td Mr. Zadrot
-										td
-										td 0
-										td 1
-										td 5
-										td 3
-										td 5
-										td 8
-										td 1
-									tr
-										td Agressor
-										td
-										td 0
-										td 1
-										td 5
-										td 3
-										td 5
-										td 8
-										td 1
-									tr
-										td IceStorm
-										td
-										td 0
-										td 1
-										td 5
-										td 3
-										td 5
-										td 8
-										td 1
-							.test-rating-table-unit
-								table
-									tr
-										td Носок судьбы
-										td
-										td 0
-										td 1
-										td 5
-										td 3
-										td 5
-										td 8
-										td 1
-
-									tr
-										td 3Jlou_4uTep
-										td
-										td 0
-										td 1
-										td 5
-										td 3
-										td 5
-										td 8
-										td 1
-									tr
-										td Fluffy
-										td
-										td 0
-										td 1
-										td 5
-										td 3
-										td 5
-										td 8
-										td 1
-									tr
-										td JoKeR :D
-										td
-										td 0
-										td 1
-										td 5
-										td 3
-										td 5
-										td 8
-										td 1
-									tr
-										td Mr. Zadrot
-										td
-										td 0
-										td 1
-										td 5
-										td 3
-										td 5
-										td 8
-										td 1
-									tr
-										td Agressor
-										td
-										td 0
-										td 1
-										td 5
-										td 3
-										td 5
-										td 8
-										td 1
-									tr
-										td IceStorm
-										td
-										td 0
-										td 1
-										td 5
-										td 3
-										td 5
-										td 8
-										td 1
-									tr
-										td Power|™4ekHyTblu NigGa
-										td
-										td 0
-										td 1
-										td 5
-										td 3
-										td 5
-										td 8
-										td 1
-									tr
-										td Носок судьбы
-										td
-										td 0
-										td 1
-										td 5
-										td 3
-										td 5
-										td 8
-										td 1
-									tr
-										td 3Jlou_4uTep
-										td
-										td 0
-										td 1
-										td 5
-										td 3
-										td 5
-										td 8
-										td 1
-									tr
-										td Fluffy
-										td
-										td 0
-										td 1
-										td 5
-										td 3
-										td 5
-										td 8
-										td 1
-									tr
-										td JoKeR :D
-										td
-										td 0
-										td 1
-										td 5
-										td 3
-										td 5
-										td 8
-										td 1
-									tr
-										td Mr. Zadrot
-										td
-										td 0
-										td 1
-										td 5
-										td 3
-										td 5
-										td 8
-										td 1
-									tr
-										td Agressor
-										td
-										td 0
-										td 1
-										td 5
-										td 3
-										td 5
-										td 8
-										td 1
-									tr
-										td IceStorm
-										td
-										td 0
-										td 1
-										td 5
-										td 3
-										td 5
-										td 8
-										td 1
-									tr
-										td Fluffy
-										td
-										td 0
-										td 1
-										td 5
-										td 3
-										td 5
-										td 8
-										td 1
-									tr
-										td JoKeR :D
-										td
-										td 0
-										td 1
-										td 5
-										td 3
-										td 5
-										td 8
-										td 1
-									tr
-										td Mr. Zadrot
-										td
-										td 0
-										td 1
-										td 5
-										td 3
-										td 5
-										td 8
-										td 1
-									tr
-										td Agressor
-										td
-										td 0
-										td 1
-										td 5
-										td 3
-										td 5
-										td 8
-										td 1
-									tr
-										td IceStorm
-										td
-										td 0
-										td 1
-										td 5
-										td 3
-										td 5
-										td 8
-										td 1
 
 						.test-rating-table-numeration
-							.test-rating-table-numeration-unit.test-rating-table-numeration-unit_active 1
-							.test-rating-table-numeration-unit 2
-							.test-rating-table-numeration-unit 3
-							.test-rating-table-numeration-unit 4
-							.test-rating-table-numeration-unit 5
-							.test-rating-table-numeration-unit 6
-							.test-rating-table-numeration-unit 7
-							.test-rating-table-numeration-unit 8
-							.test-rating-table-numeration-unit 9
-							.test-rating-table-numeration-unit 10			
+									
 						.test-rating-best
 							.test-rating-best-unit.test-rating-best-unit_01
 								.test-rating-best-unit-header
@@ -2462,105 +1997,35 @@ html
 										img(src="images/tour-main-image-01.png" alt="")
 									.test-rating-best-unit-header-title Знатоки Фактов
 								.test-rating-best-unit-body
-									.test-rating-best-unit-body-unit
-										.test-rating-best-unit-body-unit-title Носок судьбы
-										.test-rating-best-unit-body-unit-points 412
-									.test-rating-best-unit-body-unit
-										.test-rating-best-unit-body-unit-title 3Jlou_4uTep
-										.test-rating-best-unit-body-unit-points 233
-									.test-rating-best-unit-body-unit
-										.test-rating-best-unit-body-unit-title Fluffy
-										.test-rating-best-unit-body-unit-points 232
-									.test-rating-best-unit-body-unit
-										.test-rating-best-unit-body-unit-title JoKeR :D
-										.test-rating-best-unit-body-unit-points 199
-									.test-rating-best-unit-body-unit
-										.test-rating-best-unit-body-unit-title Mr. Zadrot
-										.test-rating-best-unit-body-unit-points 99
+									.test-rating-best-unit-body-unit Здесь будут отображаться игроки, набравшие максимальное количество баллов в данном туре  
 							.test-rating-best-unit.test-rating-best-unit_02
 								.test-rating-best-unit-header
 									.test-rating-best-unit-header-image
 										img(src="images/tour-main-image-02.png" alt="")
 									.test-rating-best-unit-header-title Лучшие в музыке
 								.test-rating-best-unit-body
-									.test-rating-best-unit-body-unit
-										.test-rating-best-unit-body-unit-title Носок судьбы
-										.test-rating-best-unit-body-unit-points 412
-									.test-rating-best-unit-body-unit
-										.test-rating-best-unit-body-unit-title 3Jlou_4uTep
-										.test-rating-best-unit-body-unit-points 233
-									.test-rating-best-unit-body-unit
-										.test-rating-best-unit-body-unit-title Fluffy
-										.test-rating-best-unit-body-unit-points 232
-									.test-rating-best-unit-body-unit
-										.test-rating-best-unit-body-unit-title JoKeR :D
-										.test-rating-best-unit-body-unit-points 199
-									.test-rating-best-unit-body-unit
-										.test-rating-best-unit-body-unit-title Mr. Zadrot
-										.test-rating-best-unit-body-unit-points 99
+									.test-rating-best-unit-body-unit Здесь будут отображаться игроки, набравшие максимальное количество баллов в данном туре 
 							.test-rating-best-unit.test-rating-best-unit_03
 								.test-rating-best-unit-header
 									.test-rating-best-unit-header-image
 										img(src="images/tour-main-image-03.png" alt="")
 									.test-rating-best-unit-header-title Все знают о Нефти
 								.test-rating-best-unit-body
-									.test-rating-best-unit-body-unit
-										.test-rating-best-unit-body-unit-title Носок судьбы
-										.test-rating-best-unit-body-unit-points 412
-									.test-rating-best-unit-body-unit
-										.test-rating-best-unit-body-unit-title 3Jlou_4uTep
-										.test-rating-best-unit-body-unit-points 233
-									.test-rating-best-unit-body-unit
-										.test-rating-best-unit-body-unit-title Fluffy
-										.test-rating-best-unit-body-unit-points 232
-									.test-rating-best-unit-body-unit
-										.test-rating-best-unit-body-unit-title JoKeR :D
-										.test-rating-best-unit-body-unit-points 199
-									.test-rating-best-unit-body-unit
-										.test-rating-best-unit-body-unit-title Mr. Zadrot
-										.test-rating-best-unit-body-unit-points 99
+									.test-rating-best-unit-body-unit Здесь будут отображаться игроки, набравшие максимальное количество баллов в данном туре 
 							.test-rating-best-unit.test-rating-best-unit_04
 								.test-rating-best-unit-header
 									.test-rating-best-unit-header-image
 										img(src="images/tour-main-image-04.png" alt="")
 									.test-rating-best-unit-header-title Главные киноманы
 								.test-rating-best-unit-body
-									.test-rating-best-unit-body-unit
-										.test-rating-best-unit-body-unit-title Носок судьбы
-										.test-rating-best-unit-body-unit-points 412
-									.test-rating-best-unit-body-unit
-										.test-rating-best-unit-body-unit-title 3Jlou_4uTep
-										.test-rating-best-unit-body-unit-points 233
-									.test-rating-best-unit-body-unit
-										.test-rating-best-unit-body-unit-title Fluffy
-										.test-rating-best-unit-body-unit-points 232
-									.test-rating-best-unit-body-unit
-										.test-rating-best-unit-body-unit-title JoKeR :D
-										.test-rating-best-unit-body-unit-points 199
-									.test-rating-best-unit-body-unit
-										.test-rating-best-unit-body-unit-title Mr. Zadrot
-										.test-rating-best-unit-body-unit-points 99
+									.test-rating-best-unit-body-unit Здесь будут отображаться игроки, набравшие максимальное количество баллов в данном туре  
 							.test-rating-best-unit.test-rating-best-unit_05
 								.test-rating-best-unit-header
 									.test-rating-best-unit-header-image
 										img(src="images/tour-main-image-05.png" alt="")
 									.test-rating-best-unit-header-title Лучшие в Блице
 								.test-rating-best-unit-body
-									.test-rating-best-unit-body-unit
-										.test-rating-best-unit-body-unit-title Носок судьбы
-										.test-rating-best-unit-body-unit-points 412
-									.test-rating-best-unit-body-unit
-										.test-rating-best-unit-body-unit-title 3Jlou_4uTep
-										.test-rating-best-unit-body-unit-points 233
-									.test-rating-best-unit-body-unit
-										.test-rating-best-unit-body-unit-title Fluffy
-										.test-rating-best-unit-body-unit-points 232
-									.test-rating-best-unit-body-unit
-										.test-rating-best-unit-body-unit-title JoKeR :D
-										.test-rating-best-unit-body-unit-points 199
-									.test-rating-best-unit-body-unit
-										.test-rating-best-unit-body-unit-title Mr. Zadrot
-										.test-rating-best-unit-body-unit-points 99
+									.test-rating-best-unit-body-unit Здесь будут отображаться игроки, набравшие максимальное количество баллов в данном туре  
 
 		.popup.popup_form
 			.popup-wrap
