--- a/jade/includes/components.jade
+++ b/jade/includes/components.jade
@@ -9,7 +9,7 @@ mixin header
 						img(src="images/bh-logo.svg" alt="")
 					a(href="https://mozgva.com").header-logo.header-logo_02
 						img(src="images/mzgv-logo.svg" alt="")
-				
+
 				a(href="/test.html").button.button_orange.header-button Не смогу участвовать
 
 mixin footer
@@ -28,8 +28,8 @@ mixin head(title)
 		meta(name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=no")
 		meta(name="format-detection" content="telephone=no")
 		link(rel="shortcut icon" href="https://mozgva.com/assets/favicon-3-3e0b2943e2df8471c385a6fcd1b9b6efcf655070e09ec4d4c872dac1940ef348.ico" type="image/x-icon")
-		link(rel="stylesheet" type="text/css" href="css/style.css")
-		link(rel="stylesheet" type="text/css" href="css/media.css")
+		link(rel="stylesheet" type="text/css" href="css/style.css?ver=4")
+		link(rel="stylesheet" type="text/css" href="css/media.css?ver=4")
 		script(type="text/javascript" src="js/libs.js")
 		block
 		script(type="text/javascript" src="js/scripts.js")
